Yamls/MySql-SVC.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    name: mysql
  type: ClusterIP
  sessionAffinity: None
