Yamls/SVC.yaml
kind: Service
apiVersion: v1
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  
  selector:
    app: drupal
    deploymentconfig: drupal
